Fix for masthead nav height, vertical alignment and searchbar height

--- a/packages/css-framework/src/components/_scrollable-nav.scss
+++ b/packages/css-framework/src/components/_scrollable-nav.scss
@@ -1,4 +1,3 @@
-$active-border-color: color(primary, 600);
 $btn-focus-width: 0.2rem;
 
 .rn-scrollable-nav {
@@ -8,9 +7,7 @@ $btn-focus-width: 0.2rem;
 }
 
 .rn-scrollable-nav__items {
-  height: 100%;
   display: flex;
-  align-items: center;
   list-style-type: none;
   padding: 0;
   margin: 0;
@@ -18,14 +15,17 @@ $btn-focus-width: 0.2rem;
 
 .rn-scrollable-nav__link {
   display: flex;
+  align-items: center;
   flex-wrap: nowrap;
+  margin: 0 spacing(1);
+  padding: 0 spacing(4);
+  height: 58px;
   font-size: font-size(s);
   color: color(neutral, 300);
-  margin: 0 spacing(1);
-  padding: spacing(4) spacing(4);
-  border: none;
   text-align: center;
   text-decoration: none;
+  border: none;
+  border-top: 4px solid transparent;
   border-bottom: 4px solid transparent;
   cursor: pointer;
 
@@ -37,7 +37,7 @@ $btn-focus-width: 0.2rem;
 .rn-scrollable-nav__item.is-active .rn-scrollable-nav__link {
   color: color(neutral, 500);
   font-weight: bold;
-  border-color: $active-border-color;
+  border-bottom: 4px solid color(primary, 600);
 }
 
 .rn-scrollable-nav__scroll-container {
